feat(workflow): enforce mandatory input_node and output_node in agent configurations